--- a/index.html
+++ b/index.html
@@ -18,9 +18,68 @@
     <div class="sidebar">Sidebar</div>
     <header class="header">Header</header>
     <div class="marina">Marina's Photo</div>
-    <section class="features">features</section>
+    <section class="features">
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">HOME STYLING</h4>
+        <p class="feature__text">
+          Ich berate meine Kunden vor Umzug in neues Eigenheim (Haus / Whg.
+          uvm.). Ich gehe dabei umfänglich auf die Dekorations- und
+          Gestaltungswünsche des einzelnen Kunden ein, und erstelle individuelle
+          Raum- & Designkonzepte, Farbschemata, sowie detaillierte
+          Beleuchtungspläne uvm., um das Beste aus jedem Quadratmeter
+          herauszuholen.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-presentation"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">VOLLSTÄNDIGE PROJEKTIERUNG</h4>
+        <p class="feature__text">
+          Ob es sich um die Neugestaltung der geliebten vier Wände, eines Cafes
+          oder eines Geschäftes handelt, ich erstelle umfassende Paketkonzepte,
+          die alle Erwartungen individuell erfüllen. Projektrealisierungen von
+          Anfang bis Ende mit Liebe zum Detail und Leidenschaft für die Kreation
+          sind dabei mein Maß der Dinge. Zusammen schaffen wir Innenräume, die
+          die Sinne erhellen und den Geist mit Raum und Licht erwecken.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-trophy"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">HOME STAGING</h4>
+        <p class="feature__text">
+          Eine Immobilie, die als Eigenheim inszeniert wurde, hat bis zu 18%
+          mehr Wert auf dem Markt. Aus diesem Grund arbeite ich mit renommierten
+          Immobilienagenturen zusammen, um Immobilien für den Verkauf
+          vorzubereiten. In enger Zusammenarbeit mit exklusiven Möbelmarken
+          biete ich Möbel, Dekorationsgegenstände und Pflanzen, um jede Wohnung
+          attraktiv und einladend für den ersten Eindruck des potenziellen
+          Käufers zu machen.
+          <!-- Home Staging ist nicht nur für die Besichtigungen
+          wichtig, sondern auch für die Website der Agentur und das allgemeine
+          Branding. -->
+        </p>
+      </div>
+    </section>
     <div class="story__pictures">Story pictures</div>
-    <div class="story__content">Story content</div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-sm">What my clients are saying</h3>
+      <h2 class="heading-2 heading-2--dark mb-md">
+        &ldquo;I plan to work with her again and again&rdquo;
+      </h2>
+      <p class="story__text">
+        Having now worked with Marina Baum on my cafe ( Venue ) - Interior
+        Design project I can highly recommend her abilities as an interior
+        designer. She is very insightful, friendly and full of creative ideas
+        and positive energy.
+      </p>
+      <button class="btn">CONTACT ME</button>
+    </div>
     <section class="projects">Projects</section>
     <section class="gallery">Gallery</section>
     <footer class="footer">Footer</footer>
