--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
       rel="stylesheet"
@@ -15,7 +21,35 @@
     <title>Marina Baum &mdash; interior designer</title>
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <!-- <div class="flex-container">
+      <div class="nav">
+        <ul class="navigation">
+          <li class="nav-link"><a href="#">Leistungen</a></li>
+          <li class="nav-link"><a href="#">Portfolio</a></li>
+
+          <li class="nav-link"><a href="#">Kontakt</a></li>
+        </ul>
+      </div>
+      <div class="logo">
+        <img class="img-logo" src="./img/logo.png" alt="logo" />
+      </div>
+      <div class="nav">
+        <ul class="navigation">
+          <li class="about"><a href="#">Über mich</a></li>
+          <li class="about"><a href="#">Bewertungen</a></li>
+          <li>
+            <a href="https://www.instagram.com/marina.baum.interiors/"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/marinabauminteriors/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </div> -->
     <header class="header">Header</header>
     <div class="marina">Marina's Photo</div>
     <section class="features">
@@ -66,7 +100,10 @@
         </p>
       </div>
     </section>
-    <div class="story__pictures">Story pictures</div>
+    <div class="story__pictures">
+      <img src="img/story--1.jpeg" alt="cafe" class="story__img--1" />
+      <img src="img/story--2.jpeg" alt="interior" class="story__img--2" />
+    </div>
     <div class="story__content">
       <h3 class="heading-3 mb-sm">What my clients are saying</h3>
       <h2 class="heading-2 heading-2--dark mb-md">
@@ -80,8 +117,64 @@
       </p>
       <button class="btn">CONTACT ME</button>
     </div>
-    <section class="projects">Projects</section>
-    <section class="gallery">Gallery</section>
-    <footer class="footer">Footer</footer>
+    <!-- <section class="projects">Projects</section> -->
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/gal-2.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/gal-3.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/gal-4.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/gal-5.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/gal-6.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/gal-7.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/gal-8.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/gal-9.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img src="img/gal-10.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img src="img/gal-11.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img src="img/gal-12.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img src="img/gal-13.jpeg" alt="house" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img src="img/gal-14.jpeg" alt="house" class="gallery__img" />
+      </figure>
+    </section>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item"><a href="#" class="nav__link">KONTAKT</a></li>
+
+        <li class="nav__item"><a href="#" class="nav__link">IMPRESSUM</a></li>
+
+        <li class="nav__item">
+          <a href="#" class="nav__link"><i class="fab fa-instagram"></i></a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"><i class="fab fa-facebook"></i></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
